# varalabs-erp

./: .gitignore
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
android-portal/: README.md  local.properties  settings.gradle.kts
android-portal/app/: build.gradle.kts  (+1 more)
app-gateway/: .env.example  Cargo.toml  Dockerfile
app-gateway/migrations/: 001_create_students.sql  002_dynamic_roles.sql  003_modules.sql  004_teacher_features.sql  005_student_user_link.sql  006_onboarding.sql  007_user_tenant_id.sql  008_student_onboarding_core.sql  009_student_related_tables.sql  010_form_configurations.sql  011_dashboard_tables.sql  012_staff_attendance_and_events.sql  013_class_routines.sql  014_grant_settings_update_to_admin.sql  015_grant_all_permissions_to_admin.sql  016_add_students_create_and_grant_admin.sql  017_employee_id.sql  018_staff_details.sql  019_exams_and_marks.sql  020_student_photo.sql  021_user_photo.sql  022_offer_letter_templates.sql  023_staff_personal_email.sql  024_admin_all_permissions.sql  025_audit_logs.sql  026_document_templates.sql  027_org_branding_and_doc_types.sql  028_mobile_sessions.sql  029_org_type_and_services.sql  030_services_permissions.sql
app-gateway/src/: auth.rs  db.rs  documents.rs  errors.rs  graphql.rs  main.rs  mobile.rs  offer_letter.rs  storage.rs  uploads.rs
deployment/: .env.example  README.md  cloudflare-aks-domain-setup.md  docker-compose.yml  nginx.conf
erp-frontend/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  wrangler.toml
(+177 files in other folders)
