[package]
name = "app-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid"] }
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
chrono = "0.4"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.16"
rand = "0.8"
tempfile = "3"
